<resources>    <string name="app_name">School Admin</string>    <string name="create_account">Create Account</string>    <string name="hint_phone">Phone</string>    <string name="hint_password">Password</string>    <string name="remeber_me">Remeber Me</string>    <string name="sign_in">Sing In</string>    <string name="name">Name</string>    <string name="sing_up">Sing Up</string>    <string name="title_activity_home">MainActivity</string>    <string name="title_home">Home</string>    <string name="title_student">Student</string>    <string name="title_teacher">Teacher</string>    <string name="name_student">Name Student</string>    <string name="class_name">Class name</string>    <string name="name_teacher">Name Teacher</string>    <string name="subject_name">Subject Name</string>    <string name="profile">Profile</string>    <string name="add_student">Add Student</string>    <string name="save">Save</string>    <string name="add_teacher">Add Teacher</string>    <string name="delete">Delete</string>    <string name="update">Update</string></resources>