<?xml version="1.0" encoding="utf-8"?><navigation xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/mobile_navigation"    app:startDestination="@+id/navigation_student">    <fragment        android:id="@+id/navigation_student"        android:name="com.example.schooladmin.view.fargment.StudentFragment"        android:label="@string/title_student"        tools:layout="@layout/fragment_student" />    <fragment        android:id="@+id/navigation_teacher"        android:name="com.example.schooladmin.view.fargment.TeacherFragment"        android:label="@string/title_teacher"        tools:layout="@layout/fragment_teacher" />    <fragment        android:id="@+id/navigation_profile"        android:name="com.example.schooladmin.view.fargment.ProfileFragment"        android:label="@string/profile"        tools:layout="@layout/fragment_profile" /></navigation>