<?xml version="1.0" encoding="utf-8"?><RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:id="@+id/layoutSingIn"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/gray">    <ImageView        android:id="@+id/imgIconApp"        android:layout_width="200dp"        android:layout_height="200dp"        android:layout_centerHorizontal="true"        android:layout_marginTop="60dp"        android:layout_marginBottom="25dp"        android:src="@drawable/ic_logo" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/imgIconApp"        android:layout_alignParentStart="true"        android:layout_marginTop="52dp"        android:orientation="vertical">        <EditText            android:id="@+id/edtLogInName"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bg_editetext_boder"            android:drawableStart="@drawable/selector_name"            android:drawablePadding="5dp"            android:elevation="4dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/name"            android:inputType="text"            android:padding="10dp" />        <EditText            android:id="@+id/edtLogInpassword"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bg_editetext_boder"            android:drawableStart="@drawable/selectot_password"            android:drawablePadding="5dp"            android:elevation="4dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_password"            android:inputType="textWebPassword"            android:padding="10dp" />        <CheckBox            android:id="@+id/checkboxLogInRemeberME"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/edtpassword"            android:layout_marginStart="28dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/remeber_me"            android:buttonTint="@color/purple_200"            android:textColor="@color/black"            android:textSize="15sp" />        <Button            android:id="@+id/btnLogInSingIn"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_below="@+id/txtForgetPasword"            android:layout_gravity="center_horizontal"            android:layout_marginStart="22dp"            android:layout_marginTop="36dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="8dp"            android:background="@drawable/bg_button_sin_in"            android:elevation="16dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/sign_in"            android:textAllCaps="false"            android:textColor="@android:color/white" />    </LinearLayout>    <TextView        android:id="@+id/txtLogInCreateAcount"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:layout_marginBottom="22dp"        android:fontFamily="@font/roboto_regular"        android:text="@string/create_account"        android:textColor="@color/purple_200"        android:textSize="20dp" /></RelativeLayout>