<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@color/gray">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:layout_marginBottom="10dp"        android:orientation="vertical">        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerInParent="true"                android:layout_centerVertical="true"                android:fontFamily="@font/roboto_medium"                android:text="@string/add_teacher"                android:textColor="@color/black"                android:textSize="30dp" />        </RelativeLayout>        <Spinner            android:id="@+id/spinnerBootomSheetAddTeacherSubjectName"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:elevation="4dp"            android:background="@drawable/bg_spinner"            android:hint="Subject Name"/>        <EditText            android:id="@+id/edtBottomSheetAddTeacherName"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bg_editetext_boder"            android:drawableStart="@drawable/selector_name"            android:drawablePadding="5dp"            android:elevation="4dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/name"            android:inputType="text"            android:padding="10dp" />        <EditText            android:id="@+id/edtBottomSheetAddTeacherPassword"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bg_editetext_boder"            android:drawableStart="@drawable/selectot_password"            android:drawablePadding="5dp"            android:elevation="4dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_password"            android:inputType="textPassword"            android:padding="10dp" />        <Button            android:id="@+id/btnBottomSheetAddTeacherSave"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="end"            android:layout_marginStart="22dp"            android:layout_marginTop="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="8dp"            android:background="@drawable/bg_button_sin_in"            android:elevation="4dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/save"            android:textAllCaps="false"            android:textColor="@android:color/white" />    </LinearLayout></RelativeLayout>